SW-14: feat[sw]: Add roles to the user schema
